--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,44 @@
+body{
+  font-family: 'Exo', sans-serif;
+}
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #008CBA;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 25%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+
+
+.cancelbtn {
+  width: 100;
+  padding: 14px 20px;
+  background-color: #f44336;
+}
+
+
+span.passw {
+  float: right;
+  padding-top: 8px;
+}
+
+
 .modal {
   display: none;
   position: fixed;
@@ -7,31 +48,21 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
   padding-top: 60px;
+
 }
 
+/
 .modal-content {
-  background-color: #fefefe;
-  margin: 5px auto;
-  border: 1px solid #888;
-  width: 80%;
-}
+  margin: 5% auto 15% auto;
+   width: 100
+   opacity: 0.8;
 
-button{
-  background color: #008CBA;
-  border-radius: 8px;
-  padding: 12px 28px;
-  font size: 16px;
-  opacity: 0.6;
-  transition: 0.3s;
-  display: inline-block;
-  text decoration: none;
-  cursor: pointer;
 }
-button:hover{
-  opacity: 1
+.container{
+  position: absolute;
+  opacity: 0.8;
+  font-size: 12px;
 }
 
 .close {
@@ -43,9 +74,12 @@ button:hover{
   font-weight: bold;
 }
 
-
 .close:hover,
 .close:focus {
   color: red;
   cursor: pointer;
 }
+
+  .cancelbtn {
+     width: 25%;
+  }
