--- a/m-css/styles.css
+++ b/m-css/styles.css
@@ -84,45 +84,46 @@ li.dropdown {
 
 
 /* footer content*/
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  margin: auto;
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
   text-align: center;
 }
-.logof{
-  max-width: 200px;
-  image-rendering: auto
-}
 
-.title {
-  color: rgb(42, 214, 185);
-  font-size: 30px;
-  font-family: 'Dancing Script',
-  cursive;
-}
-
-button {
-  border: none;
-  outline: 0;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
+.flip-card-inner {
+  position: relative;
   width: 100%;
-  font-size: 10px;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-a {
-  text-decoration: none;
-  font-size: 22px;
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
   color: black;
+  z-index: 2;
 }
 
-button:hover,
-a:hover {
-  opacity: 0.7;
+.flip-card-back {
+  background-color: #2b344b;
+  color: white;
+  transform: rotateY(180deg);
+  z-index: 1;
 }
 
 /*overlay menu bar*/
@@ -256,3 +257,14 @@ a:hover {
   color: #159b48
 }
 
+ /*thumbs up*/
+
+ .fa {
+   font-size: 50px;
+   cursor: pointer;
+   user-select: none;
+ }
+
+ .fa:hover {
+   color: rgb(198, 13, 255);
+ }
